# zkv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_en.md  justfile
.github/workflows/: ci.yml
docs/: PROGRESS.md
src/: agent.rs  app.rs  cli.rs  clipboard.rs  crypto.rs  db.rs  error.rs  lib.rs  main.rs  model.rs  search.rs  store.rs  style.rs  test_support.rs  totp.rs  vault.rs
src/ui/: detail.rs  input.rs  list.rs  mod.rs  theme.rs
tests/: e2e_pty.py  screenshot.py
