[package]
name = "zkv"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Liangdi <wu@liangdi.me>"]
license = "MIT"
description = "Zero-knowledge encrypted personal vault: a local-first, end-to-end encrypted TUI manager for passwords, notes, and cards."
homepage = "https://github.com/Liangdi/zkv"
repository = "https://github.com/Liangdi/zkv"
documentation = "https://docs.rs/zkv"
readme = "README.md"
keywords = ["vault", "encryption", "password-manager", "tui", "security"]
categories = ["cryptography", "command-line-utilities", "authentication"]
exclude = ["docs/", ".github/", "cliff.toml", "justfile", "tests/e2e_pty.py", "tests/screenshot.py", "tests/__pycache__", "screenshot"]

[dependencies]
# TUI
ratatui = "0.30.1"
crossterm = "0.29.0"
ratatui-sci-fi = "0.2.0"

# 数据库(bundled 静态编译 SQLite,含 FTS5)
rusqlite = { version = "0.40", features = ["bundled", "backup"] }

# 加密
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"

# 输入 / CLI
rpassword = "7"
clap = { version = "4.5", features = ["derive"] }

# 序列化 / 错误
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
color-eyre = "0.6"

# TOTP(RFC 6238):HMAC-SHA1 + base32 解码
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2"
