[package]
name = "zkv"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Liangdi <wu@liangdi.me>"]
license = "MIT"
description = "Zero-knowledge encrypted personal vault: a local-first, end-to-end encrypted TUI manager for passwords, notes, and cards."
homepage = "https://github.com/Liangdi/zkv"
repository = "https://github.com/Liangdi/zkv"
documentation = "https://docs.rs/zkv"
readme = "README.md"
keywords = ["vault", "encryption", "password-manager", "tui", "security"]
categories = ["cryptography", "command-line-utilities", "authentication"]
exclude = ["docs/", ".github/", "cliff.toml", "justfile", "tests/e2e_pty.py", "tests/screenshot.py", "tests/__pycache__", "screenshot"]

[dependencies]
# TUI
ratatui = "0.30.1"
crossterm = "0.29.0"
ratatui-sci-fi = "0.2.0"

# 数据库(bundled 静态编译 SQLite,含 FTS5)
rusqlite = { version = "0.40", features = ["bundled", "backup"] }

# 加密
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.4"
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"

# 输入 / CLI
rpassword = "7"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"

# 序列化 / 错误
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
color-eyre = "0.6"

# TOTP(RFC 6238):HMAC-SHA1 + base32 解码
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2"

# 二维码导入(2FA):图像解码 + QR 识别 + HTTP 取图(可选,仅 --qr-url 触发联网)
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rqrr = "0.8"
# blocking + rustls,无系统 OpenSSL 依赖,保持静态/bundled 构建纯净。
ureq = { version = "2", default-features = false, features = ["tls"] }
ratatui-style = "0.2.0"

[target.'cfg(windows)'.dependencies]
# Windows 明文临时文件的 owner-only ACL 保护(L2)。
# windows-sys 是 rusqlite→libsqlite3-sys 链的传递依赖(Cargo.lock 已有 0.59),
# 此处仅显式提升为直接依赖 + 启用所需 feature,不引入任何新的 crate 下载。
# 微软官方、target-only、sys 级(零运行时开销),契合项目「零新增依赖」精神。
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",            # HANDLE / CloseHandle / LocalFree / GENERIC_ALL / GENERIC_WRITE
    "Win32_Security",              # SECURITY_ATTRIBUTES / SECURITY_DESCRIPTOR / ACL / token / GetTokenInformation / *_INHERIT_ACE
    "Win32_Security_Authorization",# SetEntriesInAclW / EXPLICIT_ACCESS_W / TRUSTEE_W
    "Win32_Storage_FileSystem",    # CreateFileW / CreateDirectoryW
    "Win32_System_Threading",      # OpenProcessToken / GetCurrentProcess
] }

[dev-dependencies]
# 测试用:生成二维码 PNG 做往返解码验证。
qrcode = "0.14"
